# src/routes/image.route.ts
@@ -1,9 +1,14 @@
 import express from "express";
-import { createFoodImage } from "../controller/image.controller.js";
+import {
+    createFoodImage,
+    createMealImage,
+} from "../controller/image.controller.js";
 
 const router = express.Router();
 
-//음식 사진 생성 api
-router.get("/", createFoodImage);
+//식재료 사진 생성 api
+router.get("/material", createFoodImage);
+//식단 사진 생성 api
+router.get("/meal", createMealImage);
 
 export default router;
